--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,14 @@
 h1{
     text-decoration: underline;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+form{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+}
+aside{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
