--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,22 @@ h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
-form{
+#game-form{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: bold;
 }
-aside{
+#number-tracker{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+}
+#results-box{
+    text-align: center;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#rules{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 20px;
 }
