--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,15 +2,39 @@ h1{
     text-decoration: underline;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    margin-top: 0px;
+}
+body {
+    background-color: #3B3B3B;
+    margin: 0px;
+}
+.header {
+    font-size: 2rem;
+    font-weight: 700;
+    text-align: center;
+    min-height: 40px;
+    height: auto;
+    padding-top: 0.5%;
+    background-color: #1E1E1E;
+    color: #D5D5D5;
 }
 #game-form{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: bold;
 }
+.game-area{
+    background-color: #6e6e6e;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 #number-tracker{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: #6e6e6e;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 30px;
 }
 #results-box{
     text-align: center;
@@ -20,5 +44,7 @@ h1{
 #rules{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    padding-top: 20px;
+    background-color: #6e6e6e;
+    margin-left: 10%;
+    margin-right: 10%;
 }
