--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,21 @@ h1{
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 0px;
+    margin-bottom: 0px;
+}
+h2{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+p{
+    margin:0px;
 }
 body {
     background-color: #3B3B3B;
     margin: 0px;
+}
+input {
+    margin: auto;
 }
 .header {
     font-size: 2rem;
@@ -17,6 +28,7 @@ body {
     padding-top: 0.5%;
     background-color: #1E1E1E;
     color: #D5D5D5;
+    margin-bottom: 2%;
 }
 #game-form{
     font-family: Arial, Helvetica, sans-serif;
@@ -27,6 +39,8 @@ body {
     background-color: #6e6e6e;
     margin-left: 10%;
     margin-right: 10%;
+    border-radius: 10px;
+    margin-bottom: 2%;
 }
 #number-tracker{
     font-family: Arial, Helvetica, sans-serif;
@@ -34,12 +48,18 @@ body {
     background-color: #6e6e6e;
     margin-left: 10%;
     margin-right: 10%;
-    margin-bottom: 30px;
+    margin-bottom: 2%;
+    border-radius: 10px;
 }
 #results-box{
     text-align: center;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #6e6e6e;
+    margin-left: 10%;
+    margin-right: 10%;
+    border-radius: 10px;
+    margin-bottom: 2%;
 }
 #rules{
     text-align: center;
@@ -47,4 +67,14 @@ body {
     background-color: #6e6e6e;
     margin-left: 10%;
     margin-right: 10%;
+    border-radius: 10px;
+}
+
+.circle {
+    height: 80px;
+    width: 80px;
+    line-height: 80px;
+    background-color: black;
+    color: white;
+    border-radius: 100%;
 }
