--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 h1{
-    text-decoration: underline;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin-top: 0px;
     margin-bottom: 0px;
+    line-height: 60px;
 }
 h2{
     margin-top: 0px;
@@ -34,6 +34,7 @@ input {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     font-weight: bold;
+    padding: 2% 2% 2% 2%;
 }
 .game-area{
     background-color: #6e6e6e;
@@ -46,16 +47,20 @@ input {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background-color: #6e6e6e;
+    color: #D5D5D5;
+    font-weight: bold;
     margin-left: 10%;
     margin-right: 10%;
     margin-bottom: 2%;
     border-radius: 10px;
+    padding: 5px 0;
 }
 #results-box{
     text-align: center;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #6e6e6e;
+    color: #D5D5D5;
     margin-left: 10%;
     margin-right: 10%;
     border-radius: 10px;
@@ -65,18 +70,41 @@ input {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #6e6e6e;
+    color: #D5D5D5;
     margin-left: 10%;
     margin-right: 10%;
     border-radius: 10px;
+    padding-bottom:5px ;
 }
 
 .circle {
     height: 80px;
     width: 80px;
     line-height: 80px;
-    background-color: black;
-    color: white;
+    background-color: #0E0E0E;
+    color: #898989;
     border-radius: 100%;
+    font-size : 90%;
+}
+
+#go-button {
+    display: inline-block;
+    width: 20%;
+    height: 40px;
+    line-height: 40px;
+    background-color: #0E0E0E;
+    color: #FF00C3;
+    border-radius: 10px;
+}
+
+#reset-button {
+    display: inline-block;
+    width: 60%;
+    height: 40px;
+    line-height: 40px;
+    background-color: #0E0E0E;
+    color:white;
+    border-radius: 10px;
 }
 
 .input-button {
@@ -104,4 +132,24 @@ input {
 }
 #stopper {
     width: max-content;
+}
+.choice-container{
+    display: inline-block;
+    width: 35%;
+}
+
+#score {
+    color: #1FFF00;
+}
+
+#high-score {
+    color: #0002FF;
+}
+
+#difficulty-tracker {
+    color: #FFB400;
+}
+
+#rules-text{
+    font-weight: bold;
 }
