--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ input[type='radio']:checked ~ label div {    /*modified this code: https://www.c
     margin: auto;
 }
 
-#stopper {
+.stopper {
     width: max-content;
 }
 .choice-container{
